Fix loading scrollbar thing

--- a/public/style/mobzilla.css
+++ b/public/style/mobzilla.css
@@ -144,6 +144,8 @@ header {
   min-height: 4rem;
   background: url(/style/icons/loading.png) no-repeat center;
   animation: 0.9s rotate infinite steps(30);
+  width: 2rem;
+  margin: 0 auto;
 }
 
 #createBug, #login {
